Implement forex service

--- a/forex/src/main/resources/reference.conf
+++ b/forex/src/main/resources/reference.conf
@@ -9,6 +9,16 @@ app {
   executors {
     default = "executors.default"
   }
+  forge {
+    key = "hdrVoatkfhCveTA3GM0xNGuupPjpdT21"
+    url = "https://forex.1forge.com/1.0.2/convert"
+    read-time-out = "5 seconds"
+    connection-time-out = "5 seconds"
+  }
+  cache {
+    maximum-size = 100000
+    time-to-live = "5 minutes"
+  }
 }
 
 akka {
