--- a/forex/src/main/resources/reference.conf
+++ b/forex/src/main/resources/reference.conf
@@ -3,7 +3,7 @@ app {
     name = "forex"
   }
   api {
-    interface = "0.0.0.0"
+    interface = "127.0.0.1"
     port = 8888
   }
   executors {
@@ -22,10 +22,10 @@ app {
 }
 
 akka {
-//  loggers = [
-//    "akka.event.slf4j.Slf4jLogger"
-//  ]
-  loglevel = "ERROR"
+  loggers = [
+    "akka.event.slf4j.Slf4jLogger"
+  ]
+  loglevel = "DEBUG"
 }
 
 executors {
